--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://bahubalidnalte722006_db_user:DUjYckzcKqDyD61a@rethinkwaste.lqpxebe.mongodb.net/?retryWrites=true&w=majority&appName=RethinkWaste
 JWT_SECRET=mysecretkey
 PORT=3000
+NODE_ENV=production
