--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://bahubalidnalte722006_db_user:DUjYckzcKqDyD61a@rethinkwaste.lqpxebe.mongodb.net/?retryWrites=true&w=majority&appName=RethinkWaste
+MONGO_URI=mongodb+srv://bahubalidnalte722006_db_user:DUjYckzcKqDyD61a@rethinkwasteandagrifarm.kmrza7e.mongodb.net/?appName=ReThinkWasteandAgriFarm
 JWT_SECRET=mysecretkey
 PORT=3000
